add api key name in table
